--- a/src/css/styles.module.css
+++ b/src/css/styles.module.css
@@ -1,273 +1,298 @@
-:root{
-    --gray: #D1D5DB;
-    --black: #1F2937;
-    --navcolor: #374151;
-    --font-color: #3B82F6;
-    --navborder: #9CA3AF;
-    --gray-300: #F9FAFB;
+:root {
+	--gray: #d1d5db;
+	--black: #1f2937;
+	--navcolor: #374151;
+	--font-color: #3b82f6;
+	--navborder: #9ca3af;
+	--gray-300: #f9fafb;
 }
 
-.upperline{
-    padding: 0.2rem;
-    background-color: var(--font-color);
+.upperline {
+	padding: 0.2rem;
+	background-color: var(--font-color);
 }
-.navheader{
-    position: fixed;
-    width: 100%;
-    background-color: var(--gray-300);
-    z-index: 9;
-}
-
-.navbar{
-    position: relative;
-    width: 100%;
-    padding-top: 50px;
+.navheader {
+	position: fixed;
+	width: 100%;
+	background-color: var(--gray-300);
+	z-index: 9;
 }
 
-.name{
-    position: absolute;
-    top: 12px;
-    left: 1.5rem;
-    font-weight: bold;
-    font-size: 20px;
-    color: var(--font-color);
-    text-decoration: none;
+.navbar {
+	position: relative;
+	width: 100%;
+	padding-top: 50px;
 }
 
-.socialtwitter, .socialgithub, .sociallinkedin{
-    display: none;
+.name {
+	position: absolute;
+	top: 12px;
+	left: 1.5rem;
+	font-weight: bold;
+	font-size: 20px;
+	color: var(--font-color);
+	text-decoration: none;
 }
 
-.socialmediacontainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    margin-top: 10rem;
+.socialtwitter,
+.socialgithub,
+.sociallinkedin {
+	display: none;
 }
 
-.socialtwittermobile, .socialgithubmobile, .sociallinkedinmobile{
-    font-size: 1.5rem;
-    margin-right: 1rem;
-    text-decoration: none;
-    color: var(--font-color);
+.socialmediacontainer {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	width: 100%;
+	margin-top: 10rem;
 }
 
-.sidebarcontainer{
-    display: none;
+.socialtwittermobile,
+.socialgithubmobile,
+.sociallinkedinmobile {
+	font-size: 1.5rem;
+	margin-right: 1rem;
+	text-decoration: none;
+	color: var(--font-color);
 }
 
-
-.navmenu{
-    cursor: pointer;
-    position: absolute;
-    top: 0.5rem;
-    right: 1rem;
-    color: var(--font-color);
+.sidebarcontainer {
+	display: none;
 }
 
-.mobilemenucontainer{
-    display: flex;
-    flex-direction: column;
-    padding-top: 5rem;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    background-color: var(--gray-300);
-    z-index: 7;
+.navmenu {
+	cursor: pointer;
+	position: absolute;
+	top: 0.5rem;
+	right: 1rem;
+	color: var(--font-color);
 }
 
-.mobilemenuwrapper{
-    display: flex;
-    flex-direction: column;
+.mobilemenucontainer {
+	display: flex;
+	flex-direction: column;
+	padding-top: 5rem;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	background-color: var(--gray-300);
+	z-index: 7;
 }
 
-.mobilemenulink{
-    width: 100%;
-    text-decoration: none;
-    color: var(--navcolor);
-    font-size: 20px;
-    margin-top: 1rem;
-    padding: 10px 0;
-    border-radius: 2px;
-    cursor: pointer;
+.mobilemenuwrapper {
+	display: flex;
+	flex-direction: column;
 }
 
-.mobilemenulink:hover{
-    background-color: var(--font-color);
-    color: var(--gray-300);
+.mobilemenulink {
+	width: 100%;
+	text-decoration: none;
+	color: var(--navcolor);
+	font-size: 20px;
+	margin-top: 1rem;
+	padding: 10px 0;
+	border-radius: 2px;
+	cursor: pointer;
 }
 
-.videocontent{
-    padding-top: 5rem;
-    margin-left: 0.5rem;
-    width: 95%;
-    overflow: hidden;
+.mobilemenulink:hover {
+	background-color: var(--font-color);
+	color: var(--gray-300);
 }
 
-.videolistingcontainer{
-    margin-bottom: 1rem;
-    position: relative;
+.videocontent {
+	padding-top: 5rem;
+	margin-left: 0.5rem;
+	width: 95%;
+	overflow: hidden;
 }
 
-.videolink{
-    text-decoration: none;
-    color: var(--black);
+.videolistingcontainer {
+	margin-bottom: 1rem;
+	position: relative;
 }
 
-.likeheading{
-    width: 50%;
-    font-size: 25px;
-    font-weight: 500;
-    position: relative;
-    text-align: left;
-    margin-bottom: 1rem;
+.videolink {
+	text-decoration: none;
+	color: var(--black);
 }
 
-.noliked{
-    padding: 1rem;
-    font-size: 20px;
-    color: var(--navcolor);
-    width: 75%;
-    font-weight: 500;
+.likeheading {
+	width: 50%;
+	font-size: 25px;
+	font-weight: 500;
+	position: relative;
+	text-align: left;
+	margin-bottom: 1rem;
 }
 
-.likeicon{
-    font-size: 25px;
-    position: absolute;
-    right: -4.5rem;
-    top: 0.5rem;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    cursor: pointer;
-    background-color: var(--navborder);
-    z-index: 6;
+.noliked {
+	padding: 1rem;
+	font-size: 20px;
+	color: var(--navcolor);
+	width: 75%;
+	font-weight: 500;
 }
 
-.videolisting{
-    position: relative;
-    border: 2px solid var(--black);
-    padding-bottom: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 5px;
-    box-shadow: 2px 2px 2px 2px var(--gray);
-    z-index: 5;
+.likeicon {
+	font-size: 25px;
+	position: absolute;
+	right: -4.5rem;
+	top: 0.5rem;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	cursor: pointer;
+	background-color: var(--navborder);
+	z-index: 6;
 }
 
-.videocontentcontainer{
-    display: flex;
-    flex-direction: column;
+.videolisting {
+	position: relative;
+	border: 2px solid var(--black);
+	padding-bottom: 1rem;
+	margin-bottom: 1rem;
+	border-radius: 5px;
+	box-shadow: 2px 2px 2px 2px var(--gray);
+	z-index: 5;
 }
 
-.videoimage{
-    width: 100%;
+.videocontentcontainer {
+	display: flex;
+	flex-direction: column;
 }
 
-.videotitle, .videodate, .videodesp{
-    text-align: left;
-    margin-left: 1rem;
-    margin-bottom: 0.5rem;
+.videoimage {
+	width: 100%;
 }
 
-.framecontainer{
-    width: 100%;
-    padding-top: 5rem;
-    position: relative;
+.videotitle,
+.videodate,
+.videodesp {
+	text-align: left;
+	margin-left: 1rem;
+	margin-bottom: 0.5rem;
 }
 
-.videoframewrapper{
-    width: 100%;
-    position: relative;
-    padding-bottom: 40.25%;
-    padding-top: 25px;
-    height: 6rem;
+.framecontainer {
+	width: 100%;
+	padding-top: 5rem;
+	position: relative;
 }
 
-.videoplayingcontainer{
-    position: relative;
-    text-align: left;
-    padding: 0.5rem 0 0  0.5rem;
+.videoframewrapper {
+	width: 100%;
+	position: relative;
+	padding-bottom: 40.25%;
+	padding-top: 25px;
+	height: 6rem;
 }
 
-.videoplayviews{
-    float: left;
-    margin-top: 0.3rem;
+.videoplayingcontainer {
+	position: relative;
+	text-align: left;
+	padding: 0.5rem 0 0 0.5rem;
 }
 
-.videoplayinglike, .videoplayingliked, .videoplayingicon, .videoplayingsave{
-    font-size: 1rem;
+.videoplayviews {
+	float: left;
+	margin-top: 0.3rem;
 }
 
-.videoplayinglike{
-    position: absolute;
-    cursor: pointer;
-
+.videoplayinglike,
+.videoplayingliked,
+.videoplayingicon,
+.videoplayingsave {
+	font-size: 1rem;
 }
 
-.videoplayingsave{
-    position: absolute;
-    font-size: 1rem;
-    cursor: pointer;
-    width: 50px;
+.videoplayinglike {
+	position: absolute;
+	cursor: pointer;
 }
 
-.videoplayingtitlecontainer{
-    position: relative;
-    padding-right: 1rem;
+.videoplayingsave {
+	position: absolute;
+	font-size: 1rem;
+	cursor: pointer;
+	width: 50px;
 }
 
-.buttonwrapper, .buttonwrappers, .videoplayingliked{
-    width: 55px;
-    padding: 0.3rem 20px 0 20px;
-    position: absolute;
-    right: 2rem;
+.videoplayingtitlecontainer {
+	position: relative;
+	padding-right: 1rem;
 }
 
-.buttonwrappers, .videoplayingliked{
-    right: 6rem
+.buttonwrapper,
+.buttonwrappers,
+.videoplayingliked {
+	width: 55px;
+	padding: 0.3rem 20px 0 20px;
+	position: absolute;
+	right: 2rem;
 }
 
-.videoiframe{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.buttonwrappers,
+.videoplayingliked {
+	right: 6rem;
 }
 
-.playlistcontainer{
-    margin-bottom: 1rem;
+.videoiframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
-.playlistwrapper{
-    max-height: 300px;
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+.playlistcontainer {
+	margin-bottom: 1rem;
 }
 
-.playlistwrapper::-webkit-scrollbar{
-    display: none;
+.playlistwrapper {
+	max-height: 300px;
+	display: flex;
+	flex-direction: column;
+	overflow-y: scroll;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
 }
 
-.playlistname{
-    width: 75%;
-    font-size: 24px;
-    position: relative;
-    text-align: left;
-    background-color: var(--gray-300);
+.playlistwrapper::-webkit-scrollbar {
+	display: none;
 }
 
-.playlistimage{
-    width: 200px;
-    height: 150px;
+.playlistname {
+	width: 75%;
+	font-size: 24px;
+	position: relative;
+	text-align: left;
+	background-color: var(--gray-300);
 }
 
-.saveplaylistmodal{
-    width: 14rem;
+.playlistimage {
+	width: 200px;
+	height: 150px;
+}
+
+.modal {
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: rgba(0, 0, 0, 0.5);
+}
+
+.saveplaylistmodal {
+	width: 14rem;
+	background-color: #fff;
+	border-radius: 0.5rem;
+	/* width: 14rem;
     margin: 0 auto;
     position: relative;
     right: 2rem;
@@ -276,305 +301,299 @@
     flex-direction: column;
     max-height: 300px;
     border-radius: 2px;
-    box-shadow: 2px 2px 20px 2px var(--gray);
+    box-shadow: 2px 2px 20px 2px var(--gray); */
 }
 
-.saveplaylistcontainer{
-    display: flex;
-    flex-direction: column;
-    overflow-x: hidden;
-    overflow-y: scroll;
+.saveplaylistcontainer {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	padding: 0 0.5rem 0.5rem 0.5rem;
 }
 
-.saveplaylistwrapper::-webkit-scrollbar{
-    width: 1rem;
+.saveplaylistwrapper::-webkit-scrollbar {
+	width: 0.2rem;
 }
 
-.saveplaylistinput{
-    padding: 2px 5px;
-    margin-top: 0.5rem;
-    font-size: 1rem;
+.saveplaylistinput {
+	/* padding: 2px 5px; */
+	margin-top: 0.5rem;
+	font-size: 1rem;
 }
 
-.saveplaylistcheckbox{
-    width: 1rem;
-    height: 1rem;
+.saveplaylistcheckbox {
+	width: 1rem;
+	height: 1rem;
 }
 
-.saveplaylistname{
-    font-size: 1rem;
+.saveplaylistname {
+	font-size: 1rem;
 }
 
-.closeplaylist{
-    border-radius: 5px;
-    font-size: 1rem;
-    border-radius: 5px;
-    position: absolute;
-    right: 1rem;
-    bottom: 0.5rem;
-    border: none;
-    padding: 2px 5px;
-    cursor: pointer
+.closeplaylist {
+	border-radius: 5px;
+	font-size: 1rem;
+	border-radius: 5px;
+	position: absolute;
+	right: 1rem;
+	bottom: 0.5rem;
+	border: none;
+	padding: 2px 5px;
+	cursor: pointer;
 }
 
-.playlistlisting{
-    display: flex;
-    flex-direction: row;
-    border: 2px solid var(--navcolor);
-    border-radius: 5px;
-    margin: 0rem 0rem 0.5rem 0;
-    justify-content: space-between;
-    
+.playlistlisting {
+	display: flex;
+	flex-direction: row;
+	border: 2px solid var(--navcolor);
+	border-radius: 5px;
+	margin: 0rem 0rem 0.5rem 0;
+	justify-content: space-between;
 }
-
 
 @media only screen and (min-width: 600px) {
+	.navmenu {
+		display: none;
+	}
 
-    .navmenu{
-        display: none;
-    }
+	.mobilemenucontainer {
+		display: none;
+	}
 
-    .mobilemenucontainer{
-        display: none;
-    }
+	.name {
+		left: 3rem;
+	}
 
-    .name{
-        left: 3rem;
-    }
+	.socialtwitter,
+	.socialgithub,
+	.sociallinkedin {
+		display: block;
+		position: absolute;
+		right: 8rem;
+		top: 1rem;
+		font-size: 25px;
+		text-decoration: none;
+		color: var(--font-color);
+	}
 
-    .socialtwitter, .socialgithub, .sociallinkedin{
-        display: block;
-        position: absolute;
-        right: 8rem;
-        top: 1rem;
-        font-size: 25px;
-        text-decoration: none;
-        color: var(--font-color);
-    }
-    
-    .socialgithub{
-        right: 12rem;
-    }
-    
-    .sociallinkedin{
-        right: 4rem;
-    }
+	.socialgithub {
+		right: 12rem;
+	}
 
-    .sidebarwrapper{
-        display: flex;
-        flex-direction: column;
-        margin: 2rem 0rem;
-    }
-    
-    .sidebarcontainer{
-        display: block;
-        padding-top: 5rem;
-        background-color: var(--gray-300);
-        height: 100vh;
-        position: fixed;
-        width: 18%;
-        right: 0;
-        box-shadow: 0px 0px 6px var(--navborder);
-    }
-    
-    .sidebarbutton{
-        background-color: var(--gray-300);
-        cursor: pointer;
-        border: none;
-        font-size: 20px;
-        margin: 1rem;
-        width: 100%;
-    }
-    
-    .sidebarlink{
-        width: 100%;
-        text-decoration: none;
-        color: var(--navcolor);
-        font-size: 20px;
-        margin-top: 1rem;
-        padding: 10px 0;
-        border-radius: 2px;
-        cursor: pointer;
-    }
-    
-    .sidebarlink:hover, .sidebarbutton:hover{
-        background-color: var(--font-color);
-        color: var(--gray-300);
-    }
-    
-    .videocontent{
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        flex-wrap: wrap; 
-        margin-left: 1rem;
-    }
+	.sociallinkedin {
+		right: 4rem;
+	}
 
-    .videolisting{
-        width: 75%;
-        position: relative;
-        display: flex;
-        flex-direction: row;
-        margin-right: 1rem;
-        border: 2px solid var(--black);
-        margin-bottom: 0rem;
-        padding-bottom: 0rem;
-        border-radius: 5px;
-        box-shadow: 2px 2px 2px 2px var(--gray);
-    }
+	.sidebarwrapper {
+		display: flex;
+		flex-direction: column;
+		margin: 2rem 0rem;
+	}
 
-    .videocontentcontainer{
-        display: flex;
-        flex-direction: column;
-    }
+	.sidebarcontainer {
+		display: block;
+		padding-top: 5rem;
+		background-color: var(--gray-300);
+		height: 100vh;
+		position: fixed;
+		width: 18%;
+		right: 0;
+		box-shadow: 0px 0px 6px var(--navborder);
+	}
 
+	.sidebarbutton {
+		background-color: var(--gray-300);
+		cursor: pointer;
+		border: none;
+		font-size: 20px;
+		margin: 1rem;
+		width: 100%;
+	}
 
-    .videoimage{
-        z-index: -1;
-        left: 1rem;
-        width: 320px;
-        height: initial;
-    }
+	.sidebarlink {
+		width: 100%;
+		text-decoration: none;
+		color: var(--navcolor);
+		font-size: 20px;
+		margin-top: 1rem;
+		padding: 10px 0;
+		border-radius: 2px;
+		cursor: pointer;
+	}
 
-    .framecontainer{
-        width: 85%;
-        padding-top: 7rem;
-        margin-left: 3rem;
-    }
+	.sidebarlink:hover,
+	.sidebarbutton:hover {
+		background-color: var(--font-color);
+		color: var(--gray-300);
+	}
 
-    .videoframewrapper{
-        width: 75%;
-        position: relative;
-        padding-bottom: 40.25%;
-        padding-top: 25px;
-        height: 0;
-    }
+	.videocontent {
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		flex-wrap: wrap;
+		margin-left: 1rem;
+	}
 
-    .videoplayingcontainer{
-        width: 80%;
-    }
+	.videolisting {
+		width: 75%;
+		position: relative;
+		display: flex;
+		flex-direction: row;
+		margin-right: 1rem;
+		border: 2px solid var(--black);
+		margin-bottom: 0rem;
+		padding-bottom: 0rem;
+		border-radius: 5px;
+		box-shadow: 2px 2px 2px 2px var(--gray);
+	}
 
-    .videoplayingtitlecontainer{
-        padding-right: 0;
-    }
+	.videocontentcontainer {
+		display: flex;
+		flex-direction: column;
+	}
 
-    .videoplayingtitle{
-        position: absolute;
-        top: 0.5rem;
-        left: 0px;
-        font-size: 24px;
-        font-weight: 500;
-    }
-    
-    .videoplayviews{
-        position: absolute;
-        left: 0;
-        top: 2.5rem;
-        font-weight: 400;
-        font-size: 15px;
-    }
+	.videoimage {
+		z-index: -1;
+		left: 1rem;
+		width: 320px;
+		height: initial;
+	}
 
-    .videoplayinglike{
-        font-size: 20px;
-        top: 0.9rem;
-    }
-    
-    .videoplayingliked{
-        width: 50px;
-        right: 190px;
-        top: 1rem;
-    }
-    
-    .videoplayingsave{
-        right: 1.1rem;
-        top: 0.8rem;
-        font-size: 20px;
-    }
-    
-    .videoplayingicon{
-        position: absolute;
-        top: 1rem;
-        right: 4.6rem;
-        font-size: 20px;
-        cursor: pointer;
-    }
-    
-    .buttonwrapper, .buttonwrappers, .videoplayingliked{
-        width: 50px;
-        right: 2rem;
-        top: 1.7rem;
-    }
-    
-    .buttonwrappers, .videoplayingliked{
-        right: 7.5rem;
-    }
+	.framecontainer {
+		width: 85%;
+		padding-top: 7rem;
+		margin-left: 3rem;
+	}
 
+	.videoframewrapper {
+		width: 75%;
+		position: relative;
+		padding-bottom: 40.25%;
+		padding-top: 25px;
+		height: 0;
+	}
 
+	.videoplayingcontainer {
+		width: 80%;
+	}
 
-    .saveplaylistmodal{
-        width: 18rem;
-        right: 0rem;
-        top: -6rem;
-    }
+	.videoplayingtitlecontainer {
+		padding-right: 0;
+	}
 
-    .saveplaylistwrapper::-webkit-scrollbar{
-        width: 1rem;
-    }
+	.videoplayingtitle {
+		position: absolute;
+		top: 0.5rem;
+		left: 0px;
+		font-size: 24px;
+		font-weight: 500;
+	}
 
-    .saveplaylistinput{
-        padding: 2px 5px;
-        margin-top: 0.5rem;
-        font-size: 20px;
-    }
+	.videoplayviews {
+		position: absolute;
+		left: 0;
+		top: 2.5rem;
+		font-weight: 400;
+		font-size: 15px;
+	}
 
-    .saveplaylisttable{
-        margin-left: 2rem;
-    }
+	.videoplayinglike {
+		font-size: 20px;
+		top: 0.9rem;
+	}
 
-    .saveplaylistcheckbox{
-        width: 20px;
-        height: 20px;
-    }
+	.videoplayingliked {
+		width: 50px;
+		right: 190px;
+		top: 1rem;
+	}
 
-    .saveplaylistname{
-        font-size: 20px;
-    }
+	.videoplayingsave {
+		right: 1.1rem;
+		top: 0.8rem;
+		font-size: 20px;
+	}
 
-    .closeplaylist{
-        font-size: 20px;
-    }
+	.videoplayingicon {
+		position: absolute;
+		top: 1rem;
+		right: 4.6rem;
+		font-size: 20px;
+		cursor: pointer;
+	}
 
-    .playlistwrapper{
-        max-width: 75%;
-        display: flex;
-        flex-direction: row;
-        overflow-x: scroll;
-        overflow-y: hidden;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-    }
+	.buttonwrapper,
+	.buttonwrappers,
+	.videoplayingliked {
+		width: 50px;
+		right: 2rem;
+		top: 1.7rem;
+	}
 
-    .playlistimage{
-        width: 20rem;
-        height: initial;
-    }
+	.buttonwrappers,
+	.videoplayingliked {
+		right: 7.5rem;
+	}
 
-    .playlistlisting{
-        flex-direction: column;
-        width: 320px;
-        height: 16rem;
-        padding-bottom: 10px;
-        margin: 1rem 1rem 1rem 0;
-        justify-content: flex-start;
-        
-    }
+	.saveplaylistmodal {
+		width: 18rem;
+		right: 0rem;
+		top: -6rem;
+	}
 
-    .playlistname{
-        width: 40%;
-    }
+	.saveplaylistwrapper::-webkit-scrollbar {
+		width: 1rem;
+	}
 
-    .likeicon{
-        right: 0.5rem;
-    }
-    
+	.saveplaylistinput {
+		font-size: 20px;
+	}
+
+	.saveplaylisttable {
+		margin-left: 2rem;
+	}
+
+	.saveplaylistcheckbox {
+		width: 20px;
+		height: 20px;
+	}
+
+	.saveplaylistname {
+		font-size: 20px;
+	}
+
+	.playlistwrapper {
+		max-width: 75%;
+		display: flex;
+		flex-direction: row;
+		overflow-x: scroll;
+		overflow-y: hidden;
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+	}
+
+	.playlistimage {
+		width: 20rem;
+		height: initial;
+	}
+
+	.playlistlisting {
+		flex-direction: column;
+		width: 320px;
+		height: 16rem;
+		padding-bottom: 10px;
+		margin: 1rem 1rem 1rem 0;
+		justify-content: flex-start;
+	}
+
+	.playlistname {
+		width: 40%;
+	}
+
+	.likeicon {
+		right: 0.5rem;
+	}
 }
